Making nsCSSDeclaration::GetValue() call itself to respond !important values when needed was making the CSS Parser choke in nsCSSParserImpl::AppendValue()

b=148501, r=brade, r=bzbarsky, sr=jst